--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <!-- index.wxml -->
 <view class="container">
-    <view class="top-box" style="background:url('../../assets/images/Home page background.png')">
+    <view class="top-box" style="background:url('../../assets/images/Home page background.png');background-size:750rpx 306rpx">
         <view class="top-avatar-box flexr0c">
             <image src="../../assets/images/user.png" />
             <view class="comname">渑池交易中心</view>
@@ -24,40 +24,46 @@
             <view class="out-num">-58000</view>
         </view>
     </view>
-    <view class="list-box">
-        <view class="list-item-box flexr0c">
-            <view class="list-item-left">
-                <view class="flexr0c">
-                    <view class="list-item-title">企业名称</view>
-                    <view class="list-item-content">渑池矿产品销售占</view>
+    <scroll-view class="" scroll-x="false" scroll-y="true" upper-threshold="50" lower-threshold="50" scroll-top="0" scroll-left="0" scroll-into-view="" scroll-with-animation="false" enable-back-to-top="false" bindscrolltoupper="" bindscrolltolower="" bindscroll="" style="height:890rpx">
+        <view class="list-box">
+            <view class="list-item-box flexrbc" wx:for="{{1}}" wx:key="index">
+                <view class="check-type" hidden="{{0}}">未审核</view>
+                <view class="list-item-left">
+                    <view class="flexr0c">
+                        <view class="list-item-title">企业名称</view>
+                        <view class="list-item-content">渑池矿产品销售占</view>
+                    </view>
+                    <view class="flexr0c">
+                        <view class="list-item-title">地区</view>
+                        <view class="list-item-content">三门峡</view>
+                    </view>
+                    <view class="flexr0c">
+                        <view class="list-item-title">交易类型</view>
+                        <image hidden="{{paytype!=1}}" class="" src="../../assets/images/Alipay-small.png"></image>
+                        <image hidden="{{paytype!=2}}" class="" src="../../assets/images/zhuanzhanghuikuan-Samll.png"></image>
+                        <image hidden="{{paytype!=3}}" class="" src="../../assets/images/WeChat-Samll.png"></image>
+                        <view class="list-item-content">微信</view>
+                    </view>
+                    <view class="flexr0c">
+                        <view class="list-item-title">交易时间</view>
+                        <view class="list-item-content">2020/08/03 14:23:34</view>
+                    </view>
+                    <view class="flexr0c" wx:if="{{1}}">
+                        <view class="list-item-title">到账时间</view>
+                        <view class="list-item-content">2020/08/03 14:23:34</view>
+                    </view>
                 </view>
-                <view class="flexr0c">
-                    <view class="list-item-title">地区</view>
-                    <view class="list-item-content">三门峡</view>
+                <view class="list-item-right">
+                    <view class="flexr0c">
+                        <view class="{{'list-item-num'}}">+1258000</view>
+                        <image src="../../assets/images/The arrow.png" />
+                    </view>
+                    <view class="in-type">入账中</view>
                 </view>
-                <view class="flexr0c">
-                    <view class="list-item-title">交易类型</view>
-                    <image class="../../assets/images/Alipay-small.png" src=""></image>
-                    <image class="../../assets/images/zhuanzhanghuikuan-Samll.png" src=""></image>
-                    <image class="../../assets/images/WeChat-Samll.png" src=""></image>
-                    <view class="list-item-content">微信</view>
-                </view>
-                <view class="flexr0c">
-                    <view class="list-item-title">交易时间</view>
-                    <view class="list-item-content">2020/08/03 14:23:34</view>
-                </view>
-                <view class="flexr0c">
-                    <view class="list-item-title">到账时间</view>
-                    <view class="list-item-content">2020/08/03 14:23:34</view>
-                </view>
-            </view>
-            <view class="list-item-right flexr0c">
-                <view class="list-item-num">+1258000</view>
-                <image src="../../assets/images/The arrow.png" />
             </view>
         </view>
-    </view>
-    <van-tabbar active="{{ active }}" bind:change="onChange">
+    </scroll-view>
+    <van-tabbar active="{{ active }}" bind:change="changeTab">
         <van-tabbar-item info="2">
             <image slot="icon" src="{{ icon.index }}" mode="aspectFit" style="width: 20px; height: 20px;" />
             <image slot="icon-active" src="{{ icon.indexactive }}" mode="aspectFit" style="width: 20px; height: 20px;" />
