--- a/pages/inoutdetail/inoutdetail.wxss
+++ b/pages/inoutdetail/inoutdetail.wxss
@@ -6,3 +6,357 @@
   background-image: linear-gradient(0deg, #F6F6F6 0%, rgba(246, 246, 246, 0) 100%);
   box-shadow: 0 -13px 27px 0 rgba(0, 0, 0, 0.05);
 }
+
+.van-nav-bar {
+  background-color: #E3A33D !important;
+  height: 100rpx;
+  width: 100vw;
+}
+
+.van-nav-bar__title {
+  font-family: PingFangSC-Regular !important;
+  font-size: 18px !important;
+  color: #FFFFFF !important;
+  letter-spacing: 0 !important;
+}
+
+.van-nav-bar__text {
+  font-family: PingFangSC-Medium !important;
+  font-size: 14px !important;
+  color: #FFFFFF !important;
+  letter-spacing: 0 !important;
+}
+
+.van-hairline--bottom:after {
+  border: none !important;
+}
+
+.van-icon-arrow-left {
+  color: #fff !important;
+  font-size: 40rpx !important;
+}
+
+.container .filter {
+  width: 40rpx;
+  height: 40rpx;
+}
+
+.container .top-select {
+  background-color: #fff;
+  height: 112rpx;
+  width: 100%;
+  box-shadow: 0 24rpx 24rpx 0 rgba(0, 0, 0, 0.05);
+}
+
+.container .top-select .top-select-item-box {
+  flex: 1;
+  height: 112rpx;
+}
+
+.container .top-select .top-select-item-box .top-select-item {
+  font-family: PingFangSC-Medium;
+  font-size: 25rpx;
+  color: #BBBBBB;
+  letter-spacing: 0;
+  text-align: center;
+  line-height: 102rpx;
+  width: 275rpx;
+}
+
+.container .top-select .top-select-item-box .select-active {
+  color: #E3A33D;
+  border-bottom: 8rpx solid #E3A33D;
+}
+
+.container .middle-box {
+  background: rgba(228, 228, 228, 0.6);
+  height: 100rpx;
+  width: 100%;
+}
+
+.container .middle-box .split-line {
+  width: 2rpx;
+  height: 42rpx;
+  background-color: #c3c3c3;
+}
+
+.container .middle-box .income-box {
+  flex: 1;
+}
+
+.container .middle-box .income-box .income-num {
+  font-family: PingFangSC-Semibold;
+  font-size: 34rpx;
+  color: #E3A33D;
+  letter-spacing: 0;
+}
+
+.container .middle-box .outcome-box {
+  flex: 1;
+}
+
+.container .middle-box .outcome-box .outcome-num {
+  font-family: PingFangSC-Semibold;
+  font-size: 34rpx;
+  color: #206DE7;
+  letter-spacing: 0;
+}
+
+.container .middle-box .middle-label {
+  font-family: PingFangSC-Medium;
+  font-size: 20rpx;
+  color: #BBBBBB;
+  letter-spacing: 0;
+  margin-right: 24rpx;
+}
+
+.container .list-box {
+  background-color: #fff;
+}
+
+.container .list-box .list-item {
+  width: 714rpx;
+  padding-left: 18rpx;
+  padding-top: 24rpx;
+  border-bottom: 2rpx solid #ddd;
+  position: relative;
+}
+
+.container .list-box .list-item .check-type {
+  width: 84rpx;
+  height: 30rpx;
+  background-color: #DC863A;
+  color: #fff;
+  font-size: 20rpx;
+  text-align: center;
+  position: absolute;
+  right: 0;
+  top: 10rpx;
+}
+
+.container .list-box .list-item .list-item-left image {
+  width: 70rpx;
+  height: 70rpx;
+  margin-right: 24rpx;
+}
+
+.container .list-box .list-item .list-item-left .list-item-content-box .list-item-title {
+  font-family: PingFangSC-Medium;
+  font-size: 30rpx;
+  color: #4A4A4A;
+  letter-spacing: 0;
+}
+
+.container .list-box .list-item .list-item-left .list-item-content-box .list-item-time, .container .list-box .list-item .list-item-left .list-item-content-box .list-item-address {
+  font-family: PingFangSC-Regular;
+  font-size: 25rpx;
+  color: #BBBBBB;
+  letter-spacing: 0;
+}
+
+.container .list-box .list-item .list-item-left .list-item-content-box .list-item-address {
+  margin-bottom: 24rpx;
+}
+
+.container .list-box .list-item .list-item-right .list-item-num {
+  font-family: PingFangSC-Semibold;
+  font-size: 34rpx;
+  color: #E3A33D;
+  letter-spacing: 0;
+  margin-right: 16rpx;
+  font-weight: 500;
+}
+
+.container .list-box .list-item .list-item-right .list-item-num2 {
+  font-family: PingFangSC-Semibold;
+  font-size: 34rpx;
+  color: #206DE7;
+  letter-spacing: 0;
+  margin-right: 16rpx;
+  font-weight: 500;
+}
+
+.container .list-box .list-item .list-item-right image {
+  width: 20rpx;
+  height: 32rpx;
+}
+
+.container .list-box .list-item .list-item-right .in-type {
+  font-family: PingFangSC-Regular;
+  font-size: 16rpx;
+  color: #00B6AD;
+  letter-spacing: 0;
+  text-align: right;
+  margin-right: 36rpx;
+}
+
+.drawer {
+  width: 570rpx;
+  height: 100vh;
+  background-color: #fff;
+}
+
+.drawer .drawer-top-box {
+  height: 484rpx;
+  width: 100%;
+  position: relative;
+}
+
+.drawer .drawer-top-box .drawer-top {
+  width: 484rpx;
+  margin-left: 34rpx;
+  border-bottom: 2rpx solid #E9E9E9;
+  position: absolute;
+  bottom: 0;
+}
+
+.drawer .drawer-top-box .drawer-top .drawer-top-label {
+  font-family: PingFangSC-Medium;
+  font-size: 25rpx;
+  color: #BBBBBB;
+  letter-spacing: 0;
+}
+
+.drawer .drawer-top-box .drawer-top input {
+  background: rgba(238, 238, 238, 0.5);
+  border-radius: 6rpx;
+  margin: 8rpx 0 20rpx 0;
+  height: 70rpx;
+  line-height: 70rpx;
+  font-family: PingFangSC-Regular;
+  font-size: 25rpx;
+  letter-spacing: 0;
+}
+
+.drawer .drawer-top-box .drawer-top .input-placeholder {
+  font-family: PingFangSC-Regular;
+  font-size: 25rpx;
+  color: #BBBBBB;
+  letter-spacing: 0;
+  line-height: 70rpx;
+  margin-left: 0.3em;
+}
+
+.drawer .money-box {
+  margin-left: 32rpx;
+  width: 484rpx;
+  border-bottom: 2rpx solid #E9E9E9;
+}
+
+.drawer .money-box .money-label {
+  font-family: PingFangSC-Medium;
+  font-size: 24rpx;
+  color: #BBBBBB;
+  letter-spacing: 0;
+  margin-top: 28rpx;
+}
+
+.drawer .money-box .btn-box {
+  flex-wrap: wrap;
+  width: 484rpx;
+  height: 180rpx;
+}
+
+.drawer .money-box .btn-box .btn {
+  width: 134rpx;
+  height: 50rpx;
+  line-height: 50rpx;
+  border: 2rpx solid #E9E9E9;
+  border-radius: 6rpx;
+  background-color: #fff;
+  font-family: PingFangSC-Medium;
+  font-size: 24rpx;
+  color: #222222;
+  letter-spacing: 0;
+  text-align: center;
+}
+
+.drawer .money-box .btn-box .btn-active {
+  width: 134rpx;
+  height: 50rpx;
+  line-height: 50rpx;
+  font-family: PingFangSC-Medium;
+  font-size: 24rpx;
+  color: #fff;
+  letter-spacing: 0;
+  background-image: linear-gradient(0deg, #D36221 0%, #F2AD3C 100%, #F7E7AC 100%);
+  border-radius: 6rpx;
+  text-align: center;
+}
+
+.drawer .money-box .input-box {
+  width: 484rpx;
+  margin: 10rpx 0 20rpx 0;
+}
+
+.drawer .money-box .input-box input {
+  width: 208rpx;
+  height: 70rpx;
+  background: rgba(238, 238, 238, 0.5);
+}
+
+.drawer .money-box .input-box .to-line {
+  width: 22rpx;
+  height: 2rpx;
+  background-color: #bbb;
+}
+
+.drawer .paytype-box {
+  width: 484rpx;
+  margin-left: 32rpx;
+}
+
+.drawer .paytype-box .paytype-label {
+  font-family: PingFangSC-Medium;
+  font-size: 24rpx;
+  color: #BBBBBB;
+  letter-spacing: 0;
+  margin: 34rpx 0 26rpx 0;
+}
+
+.drawer .paytype-box .van-checkbox__label {
+  font-family: PingFangSC-Medium;
+  font-size: 24rpx;
+  color: #4A4A4A;
+  letter-spacing: 0;
+  margin-right: 60rpx;
+}
+
+.drawer .paytype-box .van-checkbox {
+  margin-bottom: 42rpx;
+}
+
+.drawer .bottom-btn-box {
+  width: 100%;
+  height: 100rpx;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.drawer .bottom-btn-box .bottom-btn-cancel {
+  flex: 1;
+  background-color: #fff;
+  border-top: 2rpx solid #bbb;
+  font-family: PingFangSC-Regular;
+  font-size: 34rpx;
+  color: #BBBBBB;
+  letter-spacing: 0;
+  height: 98rpx;
+  line-height: 100rpx;
+  text-align: center;
+}
+
+.drawer .bottom-btn-box .bottom-btn-comfirm {
+  flex: 1;
+  border-top-style: 2rpx solid #bbb;
+  background-image: linear-gradient(0deg, #D36221 0%, #F2AD3C 100%, #F7E7AC 100%);
+  color: #fff;
+  font-family: PingFangSC-Regular;
+  font-size: 34rpx;
+  color: #FFFFFF;
+  letter-spacing: 0;
+  height: 100rpx;
+  line-height: 100rpx;
+  text-align: center;
+}
